--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "framer-motion": "^5.6.0",
+    "dayjs": "^1.10.7",
     "next": "12.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
