--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "dayjs": "^1.10.7",
     "next": "12.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-feather": "^2.0.9",
     "sass": "^1.47.0",
-    "styled-components": "^5.3.3"
+    "styled-components": "^5.3.3",
+    "swr": "^1.1.2",
+    "use-lanyard": "^1.0.3"
   },
   "devDependencies": {
     "@types/node": "17.0.8",
