--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mdx-js/loader": "^1.6.22",
+    "@next/mdx": "^12.0.8",
     "dayjs": "^1.10.7",
     "framer-motion": "^5.6.0",
     "next": "12.0.7",
