--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "use-lanyard": "^1.0.3"
   },
   "devDependencies": {
+    "@types/mdx": "^2.0.1",
     "@types/node": "17.0.8",
     "@types/react": "17.0.38",
     "@types/styled-components": "^5.1.19",
