--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@icons-pack/react-simple-icons": "^4.6.1",
     "@mdx-js/loader": "^1.6.22",
     "@next/mdx": "^12.0.8",
     "dayjs": "^1.10.7",
