--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-feather": "^2.0.9",
+    "react-tooltip": "^4.2.21",
     "sass": "^1.47.0",
     "styled-components": "^5.3.3",
     "swr": "^1.1.2",
