--- a/package.json
+++ b/package.json
@@ -9,14 +9,14 @@
   },
   "dependencies": {
     "@icons-pack/react-simple-icons": "^4.6.1",
-    "@mdx-js/loader": "^1.6.22",
-    "@next/mdx": "^12.0.8",
     "dayjs": "^1.10.7",
     "framer-motion": "^5.6.0",
+    "gray-matter": "^4.0.3",
     "next": "12.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-feather": "^2.0.9",
+    "react-syntax-highlighter": "^15.4.5",
     "react-tooltip": "^4.2.21",
     "sass": "^1.47.0",
     "styled-components": "^5.3.3",
@@ -24,7 +24,6 @@
     "use-lanyard": "^1.0.3"
   },
   "devDependencies": {
-    "@types/mdx": "^2.0.1",
     "@types/node": "17.0.8",
     "@types/react": "17.0.38",
     "@types/styled-components": "^5.1.19",
