--- a/package.json
+++ b/package.json
@@ -9,17 +9,17 @@
   },
   "dependencies": {
     "@icons-pack/react-simple-icons": "^4.6.1",
+    "@mdx-js/loader": "^2.0.0",
+    "@mdx-js/react": "^2.0.0",
+    "@next/mdx": "^12.0.10",
     "dayjs": "^1.10.7",
     "framer-motion": "^5.6.0",
-    "gray-matter": "^4.0.3",
     "next": "12.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-feather": "^2.0.9",
     "react-syntax-highlighter": "^15.4.5",
     "react-tooltip": "^4.2.21",
-    "remark": "^14.0.2",
-    "remark-html": "^15.0.1",
     "sass": "^1.47.0",
     "styled-components": "^5.3.3",
     "swr": "^1.1.2",
