--- a/package.json
+++ b/package.json
@@ -1,36 +1,37 @@
 {
-  "name": "home",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@icons-pack/react-simple-icons": "^4.6.1",
-    "@mdx-js/loader": "^2.0.0",
-    "@mdx-js/react": "^2.0.0",
-    "@next/mdx": "^12.0.10",
-    "dayjs": "^1.10.7",
-    "framer-motion": "^5.6.0",
-    "next": "12.0.7",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-feather": "^2.0.9",
-    "react-syntax-highlighter": "^15.4.5",
-    "react-tooltip": "^4.2.21",
-    "sass": "^1.47.0",
-    "styled-components": "^5.3.3",
-    "swr": "^1.1.2",
-    "use-lanyard": "^1.0.3"
-  },
-  "devDependencies": {
-    "@types/node": "17.0.8",
-    "@types/react": "17.0.38",
-    "@types/styled-components": "^5.1.19",
-    "eslint": "8.6.0",
-    "eslint-config-next": "12.0.7",
-    "typescript": "4.5.4"
-  }
+	"name": "home",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint"
+	},
+	"dependencies": {
+		"@icons-pack/react-simple-icons": "^4.6.1",
+		"@mdx-js/loader": "^2.0.0",
+		"@mdx-js/react": "^2.0.0",
+		"@next/mdx": "^12.0.10",
+		"dayjs": "^1.10.7",
+		"framer-motion": "^5.6.0",
+		"next": "12.0.7",
+		"react": "17.0.2",
+		"react-dom": "17.0.2",
+		"react-feather": "^2.0.9",
+		"react-syntax-highlighter": "^15.4.5",
+		"react-tooltip": "^4.2.21",
+		"remark-gfm": "^3.0.1",
+		"sass": "^1.47.0",
+		"styled-components": "^5.3.3",
+		"swr": "^1.1.2",
+		"use-lanyard": "^1.0.3"
+	},
+	"devDependencies": {
+		"@types/node": "17.0.8",
+		"@types/react": "17.0.38",
+		"@types/styled-components": "^5.1.19",
+		"eslint": "8.6.0",
+		"eslint-config-next": "12.0.7",
+		"typescript": "4.5.4"
+	}
 }
